test/testData/highlight/errors/special/disambiguation.ml
type 'a x = private [> `x] as 'a;;